RESOLVED FIXED144873
Fix checkingLogicalHeight initialization in Document::updateLayoutIfDimensionsOutOfDate()
https://bugs.webkit.org/show_bug.cgi?id=144873
Summary Fix checkingLogicalHeight initialization in Document::updateLayoutIfDimension...
Chris Dumez
Reported 2015-05-11 10:56:22 PDT
Fix checkingLogicalHeight initialization in Document::updateLayoutIfDimensionsOutOfDate(): bool checkingLogicalHeight = ((dimensionsCheck & HeightDimensionsCheck) && !isVertical) || ((dimensionsCheck & WidthDimensionsCheck) && !isVertical); -> bool checkingLogicalHeight = ((dimensionsCheck & HeightDimensionsCheck) && !isVertical) || ((dimensionsCheck & WidthDimensionsCheck) && isVertical);
Attachments
Patch (2.09 KB, patch)
2015-05-11 11:01 PDT, Chris Dumez
no flags
Chris Dumez
Comment 1 2015-05-11 11:01:18 PDT
Simon Fraser (smfr)
Comment 2 2015-05-11 11:12:28 PDT
Comment on attachment 252868 [details] Patch Did any test detect this?
Chris Dumez
Comment 3 2015-05-11 11:13:46 PDT
(In reply to comment #2) > Comment on attachment 252868 [details] > Patch > > Did any test detect this? Not that I am aware of, it merely stood out when I was reviewing this code.
WebKit Commit Bot
Comment 4 2015-05-11 12:02:52 PDT
Comment on attachment 252868 [details] Patch Clearing flags on attachment: 252868 Committed r184114: <http://trac.webkit.org/changeset/184114>
WebKit Commit Bot
Comment 5 2015-05-11 12:02:59 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.