Fix checkingLogicalHeight initialization in Document::updateLayoutIfDimensionsOutOfDate() https://bugs.webkit.org/show_bug.cgi?id=144873

Reviewed by Simon Fraser.

Fix checkingLogicalHeight initialization in Document::updateLayoutIfDimensionsOutOfDate().
checkingLogicalHeight should only be initialized to true when
"dimensionsCheck & WidthDimensionsCheck" if isVertical is true.

* dom/Document.cpp:
(WebCore::Document::updateLayoutIfDimensionsOutOfDate):


Canonical link: https://commits.webkit.org/162909@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@184114 268f45cc-cd09-0410-ab3c-d52691b4dbfc